Fixed cropped photo resolution.

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -10,10 +10,10 @@ page-home {
     background-image: url('../assets/Mask-iPhone.png');
     background-repeat: no-repeat;
     background-size: cover;
-    #myCanvas {
+    #cropped-photo {
       position: fixed;
-      top: 35% !important;
-      left: 0 !important;
+      top: 35%;
+      left: 0;
       width: 100%;
       height: 30%;
     }
